# scbidi

./: README.md  pyproject.toml
bidea/: __init__.py  metrics.py  simulation.py
docs/: 01_getting_started.md  02_concepts.md  03_api_reference.md
examples/: run_simulations.py
figures/: benchmark_results.csv
scbidi/: __init__.py  metrics.py  null_models.py  plots.py  simulation.py  utils.py
