[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scbidi"
version = "0.1.0"
description = "A lightweight Python toolkit for bidirectional distributional association testing between gene pairs in single-cell RNA-seq"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Zeyu Yao", email = "novodoodle@gmail.com" }]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["scbidi"]
